--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension RiveScript.
 
+  1.36
+  - Strip punctuation from the bot's responses in UTF-8 mode to
+    support compatibility with %Previous.
+  - Bugfix in deparse(): If you had two matching triggers, one with a %Previous
+    and one without, you'd lose the data for one of them in the output.
+
   1.34  Feb 26 2014
   - Update README.md to include module documentation for github.
   - Fixes to META.yml
