--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension RiveScript.
 
-  1.36
+  1.36  Nov 26 2014
+  - Relicense under the MIT License.
   - Strip punctuation from the bot's responses in UTF-8 mode to
     support compatibility with %Previous.
   - Bugfix in deparse(): If you had two matching triggers, one with a %Previous
