Use Perl language automatically in setSubroutine()
Fixes #4

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension RiveScript.
 
-  1.37  TBD
+  1.38  Jul 21 2015
   - New algorithm for handling variable tags (<get>, <set>, <add>, <sub>,
     <mult>, <div>, <bot> and <env>) that allows for iterative nesting of these
     tags (for example, <set copy=<get orig>> will work now).
@@ -8,6 +8,8 @@ Revision history for Perl extension RiveScript.
     by length descending.
   - Add support for `! local concat` option to override concatenation mode
     (file scoped)
+  - Bugfix where Perl object macros set via `setSubroutine()` failed to load
+    because they were missing a programming language internally.
 
   1.36  Nov 26 2014
   - Relicense under the MIT License.
