Fix typo in 2.0.1 changelog

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension RiveScript.
 
-  2.0.1  Jan 11 2015
+  2.0.2  Jan 11 2016
+  - Fix typo in changelog.
+
+  2.0.1  Jan 11 2016
   - When formatting a user's message, consolidate multiple consecutive spaces
     down to one.
   - Apply downstream Debian patch that fixes a typo in RiveScript::WD.
